docs(known-issues): refute combined-fix regression hypothesis, record real Thread.getId() fix
Section 5.1: proves neither ClassCastException in the verification agents
combined-fix regression report (section 5) was caused by any of the three
2026-07-15 concurrent fix sessions -- both are pre-existing bugs, invisible
until --enable-native-access=ALL-UNNAMED was added to the test harness.
Root-caused and fixed the okio.Segment one (Thread.getId() hardcoded to 1,
commit 19a5025f): 100%->0% ClientHttpConnectorTests hangs. The
CompletableFuture/Netty-Future cast one remains open, flagged for dedicated
follow-up rather than force-fixed.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>